--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="nav-left">
                 <i class="bi bi-list nav-item-gap ft-sz list-icon-hide"></i>
-                <img src="youtube-2017-seeklogo.com.png" class="youtube-navbar-logo nav-item-gap">
+                <img src="WhatsApp Image 2023-09-27 at 14.46.40.jpg" class="youtube-navbar-logo nav-item-gap">
             </div>
             <div class="nav-middle">
                 <input type="text" class="search-input" placeholder="Search">
